fix "Posts" items' whitespace

--- a/_recent-posts.scss
+++ b/_recent-posts.scss
@@ -7,6 +7,8 @@
     padding-left: 0;
 
     li {
+      @extend %mini-margin;
+
       position: relative;
       overflow: hidden;
       list-style-type: none;
